[gd_scene load_steps=9 format=3 uid="uid://bh32jeafuepo5"]

[ext_resource type="PackedScene" uid="uid://dx11qv2eulcq5" path="res://Cenas/Mundo.tscn" id="1_jqwpd"]
[ext_resource type="Script" path="res://Cenas/fase_01.gd" id="1_txj2i"]
[ext_resource type="PackedScene" uid="uid://djwcc4tltk2d5" path="res://Cenas/jogador.tscn" id="2_ewndd"]
[ext_resource type="PackedScene" uid="uid://c1ounkllv70vn" path="res://Cenas/inimigo_spawner.tscn" id="3_rhq7f"]
[ext_resource type="Script" path="res://Cenas/bala_gerenciar.gd" id="5_jvvnr"]
[ext_resource type="PackedScene" uid="uid://dkk5j6ffchfld" path="res://Cenas/bala.tscn" id="6_14hf3"]
[ext_resource type="PackedScene" uid="uid://ww0k6cabci33" path="res://Cenas/hud.tscn" id="7_i1xtl"]
[ext_resource type="PackedScene" uid="uid://cemexa16quymj" path="res://Cenas/game_over.tscn" id="8_kdm6b"]

[node name="Fase01" type="Node2D"]
script = ExtResource("1_txj2i")

[node name="Jogador" parent="." instance=ExtResource("2_ewndd")]
position = Vector2(-17, 5)

[node name="GerenciaMundo" type="Node2D" parent="."]
z_index = -1

[node name="Mundo" parent="GerenciaMundo" instance=ExtResource("1_jqwpd")]

[node name="InimigoSpawner" parent="." instance=ExtResource("3_rhq7f")]

[node name="BalaGerenciar" type="Node2D" parent="."]
script = ExtResource("5_jvvnr")
bullet_scene = ExtResource("6_14hf3")

[node name="OndaTimer" type="Timer" parent="."]
process_mode = 2
wait_time = 0.5
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="Hud" parent="." instance=ExtResource("7_i1xtl")]
offset = Vector2(0, 816)
transform = Transform2D(1, 0, 0, 1, 0, 816)

[node name="GameOver" parent="." instance=ExtResource("8_kdm6b")]
process_mode = 2

[connection signal="shoot" from="Jogador" to="BalaGerenciar" method="_on_jogador_shoot"]
[connection signal="hit_p" from="InimigoSpawner" to="." method="_on_inimigo_spawner_hit_p"]
[connection signal="timeout" from="OndaTimer" to="." method="_on_onda_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
